--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 }
 
 a {
-  color: #1FA67A;
+  color: #819282;
   text-decoration: none;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
@@ -88,7 +88,7 @@ a:focus {
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  color: #1FA67A;
+  color: #819282;
 }
 
 h1,
@@ -315,7 +315,7 @@ footer.entry-meta {
 .entry-meta .fa {
   font-size: 14px;
   margin-right: 3px;
-  color: #1FA67A;
+  color: #819282;
 }
 .entry-meta span {
   margin-right: 10px;
@@ -333,13 +333,13 @@ footer.entry-meta {
 .btn.btn-default.read-more {
   float: right;
   border: 1px solid #E8E8E8;
-  color: #1FA67A;
+  color: #819282;
   background-color: #fff;
   margin-top: 10px;
 }
 .btn.btn-default.read-more:hover {
   color: #FFF;
-  background-color: #1FA67A;
+  background-color: #819282;
 }
 .search .btn.btn-default.read-more {
   float: none;
@@ -355,7 +355,7 @@ hr.section-divider {
 .page-links span {
   display: inline-block;
   color: #fff;
-  background-color: #1FA67A;
+  background-color: #819282;
   border-radius: 4px;
   padding: 2px 10px;
   margin-left: 2px;
@@ -363,15 +363,15 @@ hr.section-divider {
 .page-links a span {
   background-color: inherit;
   border: 1px solid #E8E8E8;
-  color: #1FA67A;
+  color: #819282;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
 }
 .page-links a:hover span {
-  background-color: #1FA67A;
-  border: 1px solid #1FA67A;
+  background-color: #819282;
+  border: 1px solid #819282;
   color: #fff;
 }
 /* =Asides
@@ -555,14 +555,14 @@ li.recentcomments {
   float: left;
   padding-right: 10px;
   font-size: 20px;
-  color: #1FA67A;
+  color: #819282;
 }
 
 /* =Buttons
 ----------------------------------------------- */
 .btn-default, .label-default {
-  background-color: #1FA67A;
-  border-color: #1FA67A;
+  background-color: #819282;
+  border-color: #819282;
 }
 .btn-default:hover, .label-default[href]:hover, .label-default[href]:focus, .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, #image-navigation .nav-previous a:hover, #image-navigation .nav-next a:hover {
   background-color: #1b926c;
@@ -593,14 +593,14 @@ li.recentcomments {
   padding: 12px;
   background: transparent;
   border: 1px solid #E8E8E8;
-  color: #1FA67A;
+  color: #819282;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
 }
 #infinite-handle span:hover {
-  background-color: #1FA67A;
+  background-color: #819282;
   color: #fff;
 }
 /* =Custom Styles
@@ -633,7 +633,7 @@ li.recentcomments {
 .site-main [class*="navigation"] a:hover,
 .more-link:hover {
   color: #fff;
-  background: #1FA67A;
+  background: #819282;
   text-decoration: none;
 }
 .more-link {
@@ -652,11 +652,10 @@ li.recentcomments {
   text-align: right;
 }
 .navbar.navbar-default {
-  background-color: #fff;
+  background-color: #FCFFFC;
   font-weight: 200;
   margin-bottom: 0;
   margin-top: -2px;
-  border-bottom: 1px solid #eee;
   position: relative;
   z-index: 999999;
   width: 100%;
@@ -667,7 +666,7 @@ li.recentcomments {
   line-height: 30px;
 }
 .navbar > .container .navbar-brand {
-  color: #1FA67A; 
+  color: #819282; 
   height: auto !important;
 }
 .navbar > .container .navbar-brand span {
@@ -703,7 +702,7 @@ li.recentcomments {
 .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
 .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
   color: #fff;
-  background-color: #1FA67A;
+  background-color: #819282;
 }
 .navbar-default .navbar-nav .open .dropdown-menu > li > a {
   color: #999;
@@ -726,7 +725,7 @@ li.recentcomments {
 }
 .dropdown-menu > .active > a, 
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a {
-  background-color: #1FA67A;
+  background-color: #819282;
   color: #fff;
 }
   
@@ -737,8 +736,8 @@ li.recentcomments {
   padding: 0;
 }
 .navbar-nav > li > a {
-  padding-top: 18px;
-  padding-bottom: 18px;
+  padding-top: 19px;
+  padding-bottom: 19px;
 }
 
 .navbar-default .navbar-toggle:hover,
@@ -919,7 +918,7 @@ p.logged-in-as {
 }
 #image-navigation .nav-previous a:hover,
 #image-navigation .nav-next a:hover{
-  background-color: #1FA67A;
+  background-color: #819282;
   color: #fff;
 }
 #image-navigation .nav-previous,
@@ -982,6 +981,10 @@ p.logged-in-as {
   text-align: center;
 }
 #colophon {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background-color: #1F1F1F;
   padding: 10px 0;
   border-top: 1px solid #3A3A3A;
@@ -1021,7 +1024,7 @@ p.logged-in-as {
   -o-transition: background-color 0.1s linear;
 }
 .scroll-to-top:hover {
-  background: #1FA67A;
+  background: #819282;
   opacity: .8;  
 }
 
@@ -1090,7 +1093,7 @@ p.logged-in-as {
 
 .callforaction{
   padding: 15px 0px 30px 0px;
-  background: #1FA67A;
+  background: #819282;
 }
 .callforaction-text{
   font-size: 20px;
@@ -1117,10 +1120,10 @@ p.logged-in-as {
 }
 .callforaction-button:hover {
     background-color: #fff;
-    color: #1FA67A;
+    color: #819282;
 }
 .callforaction-button:hover a {
-    color: #1FA67A;
+    color: #819282;
 }
 
 .nav>li:hover ul {
